src/test/ui/proc-macro/expand-to-unstable-2.stderr
error: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/expand-to-unstable-2.rs:10:10
   |
LL | #[derive(Unstable)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Unstable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

